--- a/cajaAhorros/app_cajaAhorros/templates/socios/socio_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/socios/socio_list.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
+{% block title %}<h2>📋 Listado de Socios</h2>{% endblock title %}
 <div class="container mt-4">
-    <div class="d-flex flex-wrap justify-content-between align-items-center mb-3">
-        <h3 class="mb-0">📋 Listado de Socios</h3>
+    <div class="d-flex flex-wrap justify-content-end align-items-center mb-2">
         <div class="d-flex gap-2 flex-wrap">
             <a href="{% url 'exportar_socios_pdf' %}" class="btn btn-danger btn-sm" target="_blank">
                 <i class="bi bi-file-earmark-pdf"></i> PDF
@@ -47,6 +47,7 @@
         <table class="table table-hover table-bordered align-middle text-center">
             <thead class="table-light">
                 <tr>
+                    <td>#</td>
                     <th>Cédula</th>
                     <th>Nombre completo</th>
                     <th>Foto</th>
@@ -56,6 +57,7 @@
             <tbody>
                 {% for socio in socios %}
                 <tr>
+                    <td>{{ forloop.counter0|add:socios.start_index }}</td> 
                     <td>{{ socio.cedula }}</td>
                     <td>{{ socio.nombre }} {{ socio.apellido }}</td>
                     <td>
