--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -75,6 +75,12 @@
                                         <i class="bi bi-cash-stack me-2"></i> Préstamos
                                     </a>
                                 </li>
+                                {# --- MENÚ PARA SOCIO --- #}
+                            {% elif role == 'Socio' %}
+                                <li class="nav-item mb-2"><a class="nav-link text-white" href="{% url 'mi_perfil' %}"><i class="bi bi-person-badge-fill me-2"></i> Mi Perfil</a></li>
+                                {% if user.socio %}
+                                <li class="nav-item mb-2"><a class="nav-link text-white" href="{% url 'ver_aportaciones_socio' user.socio.id %}"><i class="bi bi-wallet2 me-2"></i> Mis Aportes</a></li>
+                                {% endif %}
                             {% endif %}
                         </ul>
                         {% endwith %}
